docs: spark connection architecture reference + CLAUDE.md entry-E coverage
- Add docs/spark-connection-architecture.md — single source of truth
  for how this project connects to Spark: 6 entry points, 5 config
  layers, entry-vs-config matrix, slow/failure-mode breakdown, the
  local-mode 'Inbox: Ignoring error / CoarseGrainedScheduler' benign
  noise vs real failure, and a pre-flight cheat-sheet.
- CLAUDE.md 'Local dev-cluster testing': add entry-E bullet for
  scripts/ tools that import recsys_tfb and read Hive (e.g.
  sampling_overrides_editor.py, suggest_categorical_cols.py). Covers
  the canonical 3-line invocation, why source client-env.sh is
  non-optional (only app_name passed to SparkSession; all connection
  settings come from env), and the benign local-mode RPC noise that
  should not be misread as failure.
- CLAUDE.md 'Pipeline vs SPARK_CONF_DIR' section: add pointer to the
  new architecture doc for the full entry-vs-config matrix.

Companion (personal dotfile, NOT in this PR):
~/.claude/skills/dev-cluster-spark/SKILL.md gains SOP-3-C for the
local[*] CoarseGrainedScheduler benign noise pattern.

Origin: docs/spark-docs-improvements-proposal.md (still in main's
untracked working tree; deletable after this lands).